--- a/.github/workflows/python-app.yaml
+++ b/.github/workflows/python-app.yaml
@@ -11,9 +11,9 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
     - name: provision-with-micromamba
-      uses: mamba-org/provision-with-micromamba@v11
+      uses: mamba-org/provision-with-micromamba@main
       with:
         environment-file: .github/environment.yaml
         environment-name: test-environment
