--- a/.github/workflows/python-app.yaml
+++ b/.github/workflows/python-app.yaml
@@ -7,6 +7,8 @@ on:
     branches: [ main ]
   pull_request:
     branches: [ main ]
+env:
+  NUMBA_DISABLE_JIT: 1
 jobs:
   build:
     runs-on: ubuntu-latest
