Try to fix coverage with numba.

--- a/.github/workflows/python-app.yaml
+++ b/.github/workflows/python-app.yaml
@@ -29,6 +29,8 @@ jobs:
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Test with pytest
       shell: bash -l {0}
+      env:
+        NUMBA_DISABLE_JIT: 1
       run: |
         pip install pytest
         pip install pytest-cov
