--- a/.github/workflows/python-app.yaml
+++ b/.github/workflows/python-app.yaml
@@ -34,6 +34,9 @@ jobs:
       env:
         NUMBA_DISABLE_JIT: 1
       run: |
+        python -m pip install build
+        python -m build
+        python -m pip install dist/*.whl
         pip install pytest
         pip install pytest-cov
         pytest --cov=pycoxmunk pycoxmunk/Tests/ --cov-report=xml
