--- a/.github/workflows/python-app.yaml
+++ b/.github/workflows/python-app.yaml
@@ -12,6 +12,9 @@ env:
 jobs:
   build:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: ["3.9", "3.10", "3.11"]
     steps:
     - uses: actions/checkout@v3
     - name: provision-with-micromamba
